kubernetes/k3s-test-a/prometheus/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus
              mountPath: /etc/prometheus
      volumes:
        - name: prometheus
          persistentVolumeClaim:
            claimName: prometheus
